--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "^22.0.0",
     "react": "16.0.0-beta.5",
     "react-native": "^0.49.5",
+    "react-navigation": "git+https://github.com/react-community/react-navigation.git",
     "react-router-dom": "^4.2.2"
   }
 }
