--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
   "dependencies": {
     "expo": "^22.0.0",
     "react": "16.0.0-beta.5",
-    "react-native": "^0.49.5",
-    "react-navigation": "git+https://github.com/react-community/react-navigation.git",
-    "react-router-dom": "^4.2.2"
+    "react-native": "^0.49.5"
   }
 }
